clock: improve responsiveness

--- a/clock/index.html
+++ b/clock/index.html
@@ -4,10 +4,14 @@
         <title>Clock</title>
         <link rel="stylesheet" href="style.css"/>
         <script src="astronomy.browser.min.js"></script>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400" rel="stylesheet">
     </head>
     <body>
         <main class="container" id="container">
-            <section class="clock">
+            <section class="clock merriweather" id="clock">
                 <svg class="svg day-ticks" viewBox="0 0 100 100">
                         <path class="day-ticks-circle" id="normal-year"/>
                         <path class="solstice-ticks-circle" id="solstice"/>
