--- a/bingo2025.html
+++ b/bingo2025.html
@@ -100,20 +100,20 @@
       <p class="compact"><b>Mar 7th:</b> Watched <b>Eternal Sunshine of the Spotless Mind!</b> <b>12/50.</b></p>
       <p class="compact"><b>Mar 12th:</b> Watched <b>Hadestown</b>, my <b>third</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Mar 19th:</b> Watched <b>Hadestown</b> again, my <b>fourth</b> theater visit of the year<b>!</b></p>
-      <p class="compact"><b>Mar 22nd:</b> Got a <b>Hadestown T-Shirt! (1/5).</b></p>
+      <p class="compact"><b>Mar 22nd:</b> Got a <b>Hadestown T-Shirt! 1/5.</b></p>
       <p class="compact"><b>Mar 26th:</b> Watched <b>Hadestown</b> again, my <b>fifth</b> theater visit of the year<b>!</b> (I promise I'm normal about Hadestown.)</p>
       <p class="compact"><b>Mar 28th:</b> Applied to <b>Atlassian.</b></p>
       <p class="compact"><b>Mar 31st:</b> Unveiled my <b>Hadestown Immersive Lighting Karaoke</b> project to my friends, which I'm hoping will be my CG art project for the year<b>!</b></p>
     
       <h3>April</h3>
-      <p class="compact"><b>Apr 6th:</b> Went on an awesome thrift shop run with friends, and got a bunch of things, most notably <b>a crazy sci-fi looking poncho-top-thing! (2/5).</b></p>
-      <p class="compact"><b>Apr 7th:</b> Learned to cook <b>Smashed Tacos</b> - very easy<b>!</b> <b>(1/5).</b></p>
-      <p class="compact"><b>Apr 10th:</b> Typeset chapter 1 of jan lawa lili. <b>(1/27).</b></p>
-      <p class="compact"><b>Apr 11th:</b> Typeset chapters 2-3 of jan lawa lili. <b>(3/27).</b></p>
+      <p class="compact"><b>Apr 6th:</b> Went on an awesome thrift shop run with friends, and got a bunch of things, most notably <b>a crazy sci-fi looking poncho-top-thing! 2/5.</b></p>
+      <p class="compact"><b>Apr 7th:</b> Learned to cook <b>Smashed Tacos</b> - very easy<b>!</b> <b>1/5.</b></p>
+      <p class="compact"><b>Apr 10th:</b> Typeset chapter 1 of jan lawa lili. <b>1/27.</b></p>
+      <p class="compact"><b>Apr 11th:</b> Typeset chapters 2-3 of jan lawa lili. <b>3/27.</b></p>
       <p class="compact"><b>Apr 15th:</b> Applied to <b>NBN.</b></p>
-      <p class="compact"><b>Apr 23rd:</b> Typeset chapters 4-6 of jan lawa lili. <b>(6/27).</b></p>
+      <p class="compact"><b>Apr 23rd:</b> Typeset chapters 4-6 of jan lawa lili. <b>6/27.</b></p>
       <p class="compact"><b>Apr 23rd:</b> Watched <b>Hadestown</b> for the final time before they leave Sydney, my <b>sixth</b> theater visit of the year<b>!</b></p>
-      <p class="compact"><b>Apr 24rd:</b> Typeset chapter 7 of jan lawa lili. <b>(7/27).</b></p>
+      <p class="compact"><b>Apr 24rd:</b> Typeset chapter 7 of jan lawa lili. <b>7/27.</b></p>
       <p class="compact"><b>Apr 26th:</b> Watched <b>Sprited Away!</b> <b>13/50.</b></p>
       <p class="compact"><b>Apr 27th:</b> Watched <b>The Lighthouse!</b> <b>14/50.</b></p>
 
@@ -146,6 +146,12 @@
       <p class="compact"><b>May 30th:</b> Read <b>Esprit de Corpse</b>, Arc <b>5/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 31st:</b> Logged my <b>fourth</b> & <b>fifth</b> hour of driving<b>!</b></p>
       <p class="compact"><b>May 31st:</b> <span class="inverted">&nbsp;Went bouldering for the <b>eighth</b> time this month<b>!</b>&nbsp;</span></p>
+
+      <h3>June</h3>
+      <p class="compact"><b>Jun 2nd:</b> Watched <b>Scary Movie!</b> <b>16/50.</b></p>
+      <p class="compact"><b>Jun 3rd:</b> Prototyped the code for an <b>Astronomical Clock!</b></p>
+      <p class="compact"><b>Jun 7th:</b> Started prepping to record an excerpt of <b>I Don't Know</b>, from <b>Ghost Quartet! 3/5.</b></p>
+      <p class="compact"><b>Jun 8th:</b> Thrifted an <b>iridescent silky black blouse! 3/5.</b></p>
 
 
       <h2>In Detail</h2>
