--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
       <ul>
         <li><a href="/bingo2025">My 2025 Bingo Board</a></li>
+        <li><a href="/clock">An Astronomical Clock</a></li>
         <li><a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></li>
         <li><a href="/blackhole">A Black Hole Shader</a></li>
         <li><a href="/got">Game of Thrones Progress Tracker</a></li>
@@ -57,6 +58,7 @@
   
         <ul>
           <li><a href="/bingo2025">lipu pi wile mi lon tenpo sike mute1 ale mute1 luka</a></li>
+          <li><a href="/bingo2025">ilo tenpo</a></li>
           <li><a href="/comp1521">sona mi pi ilo nanpa tan pali mi lon kulupu sona [jan,uta,weka,,nena,,sama,,pali,uta,jan,uta,]</a><b>te ike en kama pona to</b></li>
           <li><a href="/blackhole">sitelen tawa nanpa pi suno pimeja</a></li>
           <li><a href="/got">lipu ilo li sona e ni3: mi lukin e sitelen tawa te musi pi supa lawa to nanpa seme</a></li>
