--- a/bingo2025.html
+++ b/bingo2025.html
@@ -31,7 +31,7 @@
 
       <p class="preserve-whitespace">  ┌A1────────────┬B1────────────┬C1────────────┬D1────────────┬E1────────────┐
   │              │              │              │              │              │
-  │    Ls 50     │    Makeup    │      CG      │    Coding    │  Grad Offer  │
+  │    Ls 50     │    Makeup    │      CG      │    Coding    │ <s> Grad Offer </s> │
   │    Hours     │              │  Art Piece   │   Project    │              │
   │              │              │              │              │              │
   ├A2────────────┼B2────────────┼C2────────────┼D2────────────┼E2────────────┤
@@ -149,9 +149,13 @@
 
       <h3>June</h3>
       <p class="compact"><b>Jun 2nd:</b> Watched <b>Scary Movie!</b> <b>16/50.</b></p>
-      <p class="compact"><b>Jun 3rd:</b> Prototyped the code for an <b>Astronomical Clock!</b></p>
-      <p class="compact"><b>Jun 7th:</b> Started prepping to record an excerpt of <b>I Don't Know</b>, from <b>Ghost Quartet! 3/5.</b></p>
+      <p class="compact"><b>Jun 3rd:</b> Coded a prototype of an <b>Astronomical Clock!</b></p>
+      <p class="compact"><b>Jun 7th:</b> Recorded a proof of concept singing the harmonies of <b>I Don't Know</b>, from <b>Ghost Quartet!</b></p>
       <p class="compact"><b>Jun 8th:</b> Thrifted an <b>iridescent silky black blouse! 3/5.</b></p>
+      <p class="compact"><b>Jun 9th:</b> Experimented with recording a longer excerpt of <b>I Don't Know!</b></p>
+      <p class="compact"><b>Jun 12th:</b> Finalised my <b>I Don't Know!</b> instrumental backing track<b>!</b></p>
+      <p class="compact"><b>Jun 14th:</b> Watched <b>Twilight!</b> <b>16/50.</b></p>
+      <p class="compact"><b>Jun 16th:</b> Gave up on going for a <b>grad offer:</b> I'll take something of a gap year instead, to figure out my plans for my future.</b></p>
 
 
       <h2>In Detail</h2>
@@ -173,13 +177,13 @@
       <h3>D1: Coding Project</h3>
       <p class="compact">A coding project is like an art project, but more employable<b>!</b> Can't be for work or uni, has to be a personal project.</p>
 
-      <p>For over a year now I've toyed with the idea of a witchy clock. I often find myself looking up sunset times, moon phase, or when the equinox is. I think it would be awesome to design a webpage with a beautiful, complex astronomical clock, to be able to see all this information easily. It'd be my perfect New Tab page<b>!</b></p>
+      <p>For over a year now I've toyed with the idea of a witchy clock. I often find myself looking up sunset times, moon phase, or when the equinox is. I think it would be awesome to design a webpage with a beautiful, complex <b>Astronomical Clock,</b> to be able to see all this information easily. It'd be my perfect New Tab page<b>!</b></p>
 
       <h3>E1: Grad Offer</h3>
       <p class="compact">I'm bad at having the motivation to apply for jobs, so by having this on my bingo board, when I look at the board to see how to spend my time, I'll get a little reminder to apply.</p>
 
       <h3>A2: Try Bookbinding</h3>
-      <p class="compact">Specifically, like, handbinding a book. I think this would be cool for a notebook for a TTRPG character. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures, I think it would be fun<b>!</b></p>
+      <p class="compact">Specifically, like, handbinding a book. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures, I think it would be fun<b>!</b></p>
 
       <p>My current plan is to bind <a href="https://jan-lawa-lili.gitlab.io/">jan lawa lili</a>, the <a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> translation of <a href="https://en.wikipedia.org/wiki/The_Little_Prince">The Little Prince</a>, in the <b>sitelen pona</b> script. I find both the book and the language to be very beautiful and special to me, and, like, this is an obscure enough project that nobody will have done it before.</p>
 
@@ -196,9 +200,9 @@
       <h3>D2: Learn a new Piano/Lyre Song</h3>
       <p class="compact">Every time I sit down at an instrument, I play, like, the one song I already know, because I find it frustrating to learn new songs. For this goal I have to actually push through and fully learn a whole new song in its entirety.</p>
 
-      <p>It's so fun to sing and play an instrument at once, and I love singing, so it would be good to work that into this. I was first thinking <b>Starchild</b>, from <b>Ghost Quartet</b>, then maybe something from <b>Hadestown</b>, and now I'm thinking <b>Mein Herr</b> from <b>Carabet!</b></p>
+      <p>It's so fun to sing and play an instrument at once, and I love singing, so it would be good to work that into this. I might pick someting from <b>Ghost Quartet</b>, or <b>Hadestown</b>, or perhaps even <b>Carabet!</b></p>
 
-      <h3>E2: Do 3 Pinks</h3>
+      <h3>E2: Do 3 Pinks [✓]</h3>
       <p class="compact"><b>Pink</b> is a difficulty in my bouldering gym, around V3. Usually I find I can flash most <b>teals</b> (V2ish), but have no idea how to start pinks - this goal is designed to help me persevere and overcome the difficulty spike between teal and pink.</p>
 
       <h3>A3: Go Off-Grid for a Weekend</h3>
@@ -235,7 +239,11 @@
       <h3>B4: Practice Voice</h3>
       <p class="compact">Bit of a broad goal, I just want to do something that involves recording my voice, listening to the recording, and then trying to improve. This could range from voice training to singing<b>!</b></p>
 
-      <h3>C4: Boulder x8 in 1 Month</h3>
+      <p>Right now, I'm working on a cover of <b>I Don't Know,</b> from <b>Ghost Quartet!</b> It has lots of really cool and interesting harmonies and variety throughout. I'll probably do a couple incremental passes, each time identifying what I want to improve in my voice, to satisfy this goal<b>!</b></p>
+
+      <p>Exposing myself to my voice like this has been helping me feel more at ease with it, which is cool.</p>
+
+      <h3>C4: Boulder x8 in 1 Month [✓]</h3>
       <p class="compact">Consistency is important<b>!</b> Maybe a bit of a crazy target, but I've got 12 attempts, so she'll be right.</p>
 
       <h3>D4: Watch 50 Movies</h3>
@@ -265,8 +273,9 @@
       <p>Like, my use case for a signed language is communicating with my (hearing) friends when we're in a loud environment, or when one of them goes non-speaking. Auslan/luka pona both satisfy these use cases, and, like, it makes sense to learn whatever my friends are learning, otherwise what's the point?</p>
 
       <h3>E5: Read Something Big</h3>
-      <p class="compact">This one was originally to read <a href="https://pactwebserial.wordpress.com/">Pact</a>, (a webserial by wildbow), but I decided that was cheating a bit as I was already most of the way through before the start of the year.</p>
-      <p>I'll define <q>big</q> as like, over 500k words.</p>
+      <p class="compact">I'll define <q>big</q> as like, over 500k words.</p>
+  
+      <p>This one was originally to read <a href="https://pactwebserial.wordpress.com/">Pact</a>, (a webserial by wildbow), but I decided that was cheating a bit as I was already most of the way through before the start of the year.</p>
 
       <p>Instead, I'm currently working on <a href="https://twigwebserial.wordpress.com/">Twig</a>, another webserial by the same author.</p>
 
