--- a/bingo2025.html
+++ b/bingo2025.html
@@ -31,8 +31,8 @@
 
       <p class="preserve-whitespace">  ┌A1────────────┬B1────────────┬C1────────────┬D1────────────┬E1────────────┐
   │              │              │              │              │              │
-  │    Ls 50     │    Makeup    │      CG      │    Coding    │ <s> Grad Offer </s> │
-  │    Hours     │              │  Art Piece   │   Project    │              │
+  │    Ls 50     │    Makeup    │      CG      │    <span class="inverted"> Tech </span>    │ <s> Grad Offer </s> │
+  │    Hours     │              │  Art Piece   │  <span class="inverted"> Project </span>   │              │
   │              │              │              │              │              │
   ├A2────────────┼B2────────────┼C2────────────┼D2────────────┼E2────────────┤
   │              │              │              │ Learn a new  │              │
@@ -41,7 +41,7 @@
   │              │              │              │              │              │
   ├A3────────────┼B3────────────┼C3────────────┼D3────────────┼E3────────────┤
   │ Go Off-Grid  │              │              │              │    5 New     │
-  │    for a     │   Playtest   │  <span class="inverted"> Turn 21 </span>   │     60kg     │   Wardrobe   │
+  │    for a     │   Playtest   │  <span class="inverted"> Turn 21 </span>   │     55kg     │   Wardrobe   │
   │   Weekend    │   Own TTG    │              │              │    Pieces    │
   │              │              │              │              │              │
   ├A4────────────┼B4────────────┼C4────────────┼D4────────────┼E4────────────┤
@@ -87,7 +87,6 @@
       <p class="compact"><b>Feb 10th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
       <p class="compact"><b>Feb 10th:</b> Climbed my <b>second</b> pink this year<b>!</b> I spent a long time studying it, and then took only two attempts.</p>
       <p class="compact"><b>Feb 16th:</b> Logged my <b>second</b> hour of driving<b>!</b></p>
-      <p class="compact"><b>Feb 17th:</b> Put <a href="/got">a Game of Thrones episode tracker</a> on my website, that's <b>2/3!</b></p>
       <p class="compact"><b>Feb 20th:</b> Measured <b>≥52kg</b>.</p>
 
       <h3>March</h3>
@@ -149,13 +148,19 @@
 
       <h3>June</h3>
       <p class="compact"><b>Jun 2nd:</b> Watched <b>Scary Movie!</b> <b>16/50.</b></p>
-      <p class="compact"><b>Jun 3rd:</b> Coded a prototype of an <b>Astronomical Clock!</b></p>
+      <p class="compact"><b>Jun 3rd:</b> Put an <a href="/clock">Astronomical Clock!</a> on my website, that's <b>2/3!</b></p>
       <p class="compact"><b>Jun 7th:</b> Recorded a proof of concept singing the harmonies of <b>I Don't Know</b>, from <b>Ghost Quartet!</b></p>
       <p class="compact"><b>Jun 8th:</b> Thrifted an <b>iridescent silky black blouse! 3/5.</b></p>
       <p class="compact"><b>Jun 9th:</b> Experimented with recording a longer excerpt of <b>I Don't Know!</b></p>
       <p class="compact"><b>Jun 12th:</b> Finalised my <b>I Don't Know!</b> instrumental backing track<b>!</b></p>
-      <p class="compact"><b>Jun 14th:</b> Watched <b>Twilight!</b> <b>16/50.</b></p>
+      <p class="compact"><b>Jun 14th:</b> Watched <b>Twilight!</b> <b>17/50.</b></p>
       <p class="compact"><b>Jun 16th:</b> Gave up on going for a <b>grad offer:</b> I'll take something of a gap year instead, to figure out my plans for my future.</b></p>
+      <p class="compact"><b>Jun 23rd:</b> Sent off my <b>3D prints</b> for my <b>box controller.</b></p>
+      <p class="compact"><b>Jun 25th:</b> Sent off my <b>laser cuts</b> for my <b>box controller.</b></p>
+      <p class="compact"><b>Jun 27th:</b> Read <b>Lamb to the Slaughter</b>, Arc <b>6/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jun 29th:</b> <b>Assembled and soldered</b> my <b>box controller.</b></p>
+      <p class="compact"><b>Jun 29th:</b> Watched <b>How to Train Your Dragon (2025)!</b> <b>18/50.</b></p>
+      <p class="compact"><b>Jun 30th:</b> <span class="inverted">&nbsp;Complted my box controller!&nbsp;</span></p>
 
 
       <h2>In Detail</h2>
@@ -174,10 +179,8 @@
 
       <p>Once I'm further along in this project, I'll likely make a webpage for it, talking about some of the decisions I made along the way.</p>
 
-      <h3>D1: Coding Project</h3>
-      <p class="compact">A coding project is like an art project, but more employable<b>!</b> Can't be for work or uni, has to be a personal project.</p>
-
-      <p>For over a year now I've toyed with the idea of a witchy clock. I often find myself looking up sunset times, moon phase, or when the equinox is. I think it would be awesome to design a webpage with a beautiful, complex <b>Astronomical Clock,</b> to be able to see all this information easily. It'd be my perfect New Tab page<b>!</b></p>
+      <h3>D1: Tech Project</h3>
+      <p class="compact">A technical project is like an art project, but more employable<b>!</b> Can't be for work or uni, has to be a personal project.</p>
 
       <h3>E1: Grad Offer</h3>
       <p class="compact">I'm bad at having the motivation to apply for jobs, so by having this on my bingo board, when I look at the board to see how to spend my time, I'll get a little reminder to apply.</p>
@@ -228,6 +231,8 @@
 
       <p>That said, I've been told this goal is crazy, so: <b>If I don't crack 54kg by July, I'll reduce the goal to 55kg.</b></p>
 
+      <p>Update: the goal is now <b>55kg!</b></p>
+
       <h3>E3: 5 New Wardrobe Pieces</h3>
       <p class="compact">My wardrobe could do with just an itty bit of expanding, and also, going shopping with friends is fun<b>!</b></p>
 
@@ -257,7 +262,7 @@
       <h3>A5: Put 3 Things on Website</h3>
       <p class="compact">I want to get my website off the ground, I think personal websites are awesome and I want one and it's within my power to make that a reality<b>!</b></p>
 
-      <p>Update on this one is that putting things on my website is actually really easy and fun, so I could totally up this, or reserve it to like, <q>3 <b>awesome</b> things</q>.</p>
+      <p>Update on this one is that putting things on my website is actually really easy and fun, so I', gonna limit it to like, <q>3 <b>awesome</b> things</q>.</p>
 
       <h3>B5: 5 New Recipes</h3>
       <p class="compact">It's easy to follow a recipe, but having to look up and refer to a recipe is a big overhead cost, while cooking. If I learn some more, I'll just have them up my sleeve, raring and ready to go<b>!</b></p>
