--- a/bingo2025.html
+++ b/bingo2025.html
@@ -162,6 +162,8 @@
       <p class="compact"><b>Jun 29th:</b> Watched <b>How to Train Your Dragon (2025)!</b> <b>18/50.</b></p>
       <p class="compact"><b>Jun 30th:</b> <span class="inverted">&nbsp;Complted my box controller!&nbsp;</span></p>
 
+      <h3>July</h3>
+      <p class="compact"><b>Jul 5th:</b> Watched <b>Children of Men!</b> <b>19/50.</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
