move things into notes folder

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </svg>
       </button>
 
-      <button data-lang-toggle>
+      <!-- <button data-lang-toggle>
         <span class="en-icon">EN</span>
         <span class="tp-icon">&#xFFA31;</span>
-      </button>
+      </button> -->
 
-      <div class="en">
+      <!-- <div class="en"> -->
 
       <h1>Hello<b>!</b></h1>
 
@@ -39,16 +39,16 @@
       <ul>
         <li><a href="/bingo2025">My 2025 Bingo Board</a></li>
         <li><a href="/clock">An Astronomical Clock</a></li>
-        <li><a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></li>
+        <li><a href="/comp1521">My COMP1521 Course Resources</a> <b>[Very WIP]</b></li>
         <li><a href="/blackhole">A Black Hole Shader</a></li>
-        <li><a href="/got">Game of Thrones Progress Tracker</a></li>
+        <li><a href="/notes">Assorted Notes</a></li>
       </ul>
 
       <p>Thanks for stopping by<b>!</b></p>
 
-      </div>
+      <!-- </div> -->
 
-      <div class="tp sitelen-pona">
+      <!-- <div class="tp sitelen-pona">
 
         <h1>toki a</h1>
 
@@ -66,7 +66,7 @@
   
         <p>pona tawa sina tan ni3: sina lukin e lipu mi</p>
   
-      </div>
+      </div> -->
 
     </div></div>
   </body>
