--- a/notes/got.html
+++ b/notes/got.html
@@ -22,7 +22,7 @@
         </svg>
       </button>
 
-      <p><a href="/">Home</a> » </p>
+      <p><a href="/">Home</a> » <a href="/notes">Notes</a> » </p>
 
       <h1>Game of Thrones Tracker</h1>
 
