--- a/bingo2025.html
+++ b/bingo2025.html
@@ -164,6 +164,7 @@
 
       <h3>July</h3>
       <p class="compact"><b>Jul 5th:</b> Watched <b>Children of Men!</b> <b>19/50.</b></p>
+      <p class="compact"><b>Jul 8th:</b> Watched <b>KPop Demon Hunters!</b> <b>20/50.</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
