clock: begin adding stars

--- a/clock/index.html
+++ b/clock/index.html
@@ -111,6 +111,13 @@
                         <div class="celestial-obj sun-sky" id="sun-sky">🌞︎︎</div>
                         <div class="celestial-obj moon-sky" id="moon-sky">🌚︎</div>
 
+                        <div class="celestial-star" id="crucis-a"></div>
+                        <div class="celestial-star" id="crucis-b"></div>
+                        <div class="celestial-star" id="crucis-c"></div>
+                        <div class="celestial-star" id="crucis-d"></div>
+                        <div class="celestial-star" id="centauri-a"></div>
+                        <div class="celestial-star" id="centauri-b"></div>
+
                         <span class="compass-label big-label" style="--i: 0">N</span>
                         <span class="compass-label" style="--i: 2">NE</span>
                         <span class="compass-label big-label" style="--i: 4">E</span>
