--- a/bingo2025.html
+++ b/bingo2025.html
@@ -167,6 +167,8 @@
       <p class="compact"><b>Jul 8th:</b> Watched <b>KPop Demon Hunters!</b> <b>20/50.</b></p>
       <p class="compact"><b>Jul 9th:</b> Watched <b>Cats</b>, my <b>eighth</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Jul 14th:</b> Watched <b>The Secretary!</b> <b>21/50.</b></p>
+      <p class="compact"><b>Jul 17:</b> Read <b>Tooth and Nail</b>, Arc <b>7/20</b> of <b>Twig!</b></p>
+
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
