--- a/bingo2025.html
+++ b/bingo2025.html
@@ -168,6 +168,9 @@
       <p class="compact"><b>Jul 9th:</b> Watched <b>Cats</b>, my <b>eighth</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Jul 14th:</b> Watched <b>The Secretary!</b> <b>21/50.</b></p>
       <p class="compact"><b>Jul 17:</b> Read <b>Tooth and Nail</b>, Arc <b>7/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jul 21:</b> Read <b>Bleeding Edge</b>, Arc <b>8/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jul 25:</b> Read <b>Counting Sheep</b>, Arc <b>9/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jul 29:</b> Read <b>In Sheep's Clothing</b>, Arc <b>10/20</b> of <b>Twig!</b></p>
 
 
       <h2>In Detail</h2>
