--- a/bingo2025.html
+++ b/bingo2025.html
@@ -167,12 +167,16 @@
       <p class="compact"><b>Jul 8th:</b> Watched <b>KPop Demon Hunters!</b> <b>20/50.</b></p>
       <p class="compact"><b>Jul 9th:</b> Watched <b>Cats</b>, my <b>eighth</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Jul 14th:</b> Watched <b>The Secretary!</b> <b>21/50.</b></p>
-      <p class="compact"><b>Jul 17:</b> Read <b>Tooth and Nail</b>, Arc <b>7/20</b> of <b>Twig!</b></p>
-      <p class="compact"><b>Jul 21:</b> Read <b>Bleeding Edge</b>, Arc <b>8/20</b> of <b>Twig!</b></p>
-      <p class="compact"><b>Jul 25:</b> Read <b>Counting Sheep</b>, Arc <b>9/20</b> of <b>Twig!</b></p>
-      <p class="compact"><b>Jul 29:</b> Read <b>In Sheep's Clothing</b>, Arc <b>10/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jul 17th:</b> Read <b>Tooth and Nail</b>, Arc <b>7/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jul 21th:</b> Read <b>Bleeding Edge</b>, Arc <b>8/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jul 25th:</b> Read <b>Counting Sheep</b>, Arc <b>9/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Jul 29th:</b> Read <b>In Sheep's Clothing</b>, Arc <b>10/20</b> of <b>Twig!</b></p>
+
+      <h3>August</h3>
+      <p class="compact"><b>Aug 1st:</b> Read <b>Cut to the Quick</b>, Arc <b>11/20</b> of <b>Twig!</b></p>
 
 
+      <h3>July</h3>
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
 
