--- a/bingo2025.html
+++ b/bingo2025.html
@@ -102,40 +102,40 @@
       <p class="compact"><b>Mar 22nd:</b> Got a <b>Hadestown T-Shirt! 1/5.</b></p>
       <p class="compact"><b>Mar 26th:</b> Watched <b>Hadestown</b> again, my <b>fifth</b> theater visit of the year<b>!</b> (I promise I'm normal about Hadestown.)</p>
       <p class="compact"><b>Mar 28th:</b> Applied to <b>Atlassian.</b></p>
-      <p class="compact"><b>Mar 31st:</b> Unveiled my <b>Hadestown Immersive Lighting Karaoke</b> project to my friends, which I'm hoping will be my CG art project for the year<b>!</b></p>
+      <!-- <p class="compact"><b>Mar 31st:</b> Unveiled my <b>Hadestown Immersive Lighting Karaoke</b> project to my friends, which I'm hoping will be my CG art project for the year<b>!</b></p> -->
     
       <h3>April</h3>
       <p class="compact"><b>Apr 6th:</b> Went on an awesome thrift shop run with friends, and got a bunch of things, most notably <b>a crazy sci-fi looking poncho-top-thing! 2/5.</b></p>
       <p class="compact"><b>Apr 7th:</b> Learned to cook <b>Smashed Tacos</b> - very easy<b>!</b> <b>1/5.</b></p>
-      <p class="compact"><b>Apr 10th:</b> Typeset chapter 1 of jan lawa lili. <b>1/27.</b></p>
-      <p class="compact"><b>Apr 11th:</b> Typeset chapters 2-3 of jan lawa lili. <b>3/27.</b></p>
+      <!-- <p class="compact"><b>Apr 10th:</b> Typeset chapter 1 of jan lawa lili. <b>1/27.</b></p> -->
+      <!-- <p class="compact"><b>Apr 11th:</b> Typeset chapters 2-3 of jan lawa lili. <b>3/27.</b></p> -->
       <p class="compact"><b>Apr 15th:</b> Applied to <b>NBN.</b></p>
-      <p class="compact"><b>Apr 23rd:</b> Typeset chapters 4-6 of jan lawa lili. <b>6/27.</b></p>
+      <!-- <p class="compact"><b>Apr 23rd:</b> Typeset chapters 4-6 of jan lawa lili. <b>6/27.</b></p> -->
       <p class="compact"><b>Apr 23rd:</b> Watched <b>Hadestown</b> for the final time before they leave Sydney, my <b>sixth</b> theater visit of the year<b>!</b></p>
-      <p class="compact"><b>Apr 24rd:</b> Typeset chapter 7 of jan lawa lili. <b>7/27.</b></p>
+      <!-- <p class="compact"><b>Apr 24rd:</b> Typeset chapter 7 of jan lawa lili. <b>7/27.</b></p> -->
       <p class="compact"><b>Apr 26th:</b> Watched <b>Sprited Away!</b> <b>13/50.</b></p>
       <p class="compact"><b>Apr 27th:</b> Watched <b>The Lighthouse!</b> <b>14/50.</b></p>
 
       <h3>May</h3>
-      <p class="compact"><b>May 2nd:</b> Time-synced the lyrics of the <b>first act</b> of Hadestown<b>!</b></p>
+      <!-- <p class="compact"><b>May 2nd:</b> Time-synced the lyrics of the <b>first act</b> of Hadestown<b>!</b></p> -->
       <p class="compact"><b>May 3rd:</b> Watched <b>Les Misérables: The Arena Spectacular</b>, my <b>seventh</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>May 3rd:</b> Read <b>Taking Root</b>, Arc <b>1/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 4th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
       <p class="compact"><b>May 4th:</b> Watched <b>Millenium Actress!</b> <b>15/50.</b></p>
-      <p class="compact"><b>May 5th:</b> Rendered <b>Road to Hell!</b> <b>1/18.</b></p>
-      <p class="compact"><b>May 6th:</b> Rendered <b>Any Way the Wind Blows</b> through to <b>Wedding Song!</b> <b>2/18.</b></p>
-      <p class="compact"><b>May 7th:</b> Rendered <b>Epic I</b> through to <b>Livin' it Up on Top!</b> <b>3/18.</b></p>
-      <p class="compact"><b>May 8th:</b> Rendered <b>All I've Ever Known</b> through to <b>Way Down Hadestown!</b> <b>5/18.</b></p>
-      <p class="compact"><b>May 10th:</b> Rendered <b>A Gathering Storm</b> through to <b>Chant!</b> <b>6/18.</b></p>
-      <p class="compact"><b>May 10th:</b> Went bouldering for the <b>second</b> time this month<b>!</b></p>
+      <!-- <p class="compact"><b>May 5th:</b> Rendered <b>Road to Hell!</b> <b>1/18.</b></p> -->
+      <!-- <p class="compact"><b>May 6th:</b> Rendered <b>Any Way the Wind Blows</b> through to <b>Wedding Song!</b> <b>2/18.</b></p> -->
+      <!-- <p class="compact"><b>May 7th:</b> Rendered <b>Epic I</b> through to <b>Livin' it Up on Top!</b> <b>3/18.</b></p> -->
+      <!-- <p class="compact"><b>May 8th:</b> Rendered <b>All I've Ever Known</b> through to <b>Way Down Hadestown!</b> <b>5/18.</b></p> -->
+      <!-- <p class="compact"><b>May 10th:</b> Rendered <b>A Gathering Storm</b> through to <b>Chant!</b> <b>6/18.</b></p> -->
+      <!-- <p class="compact"><b>May 10th:</b> Went bouldering for the <b>second</b> time this month<b>!</b></p> -->
       <p class="compact"><b>May 10th:</b> Read <b>Cat out of the Bag</b>, Arc <b>2/20</b> of <b>Twig!</b></p>
-      <p class="compact"><b>May 12th:</b> Rendered <b>Hey, Little Songbird</b> through to <b>When the Chips are Down!</b> <b>7/18.</b></p>
-      <p class="compact"><b>May 13th:</b> Rendered <b>Gone, I'm Gone!</b> <b>8/18.</b></p>
+      <!-- <p class="compact"><b>May 12th:</b> Rendered <b>Hey, Little Songbird</b> through to <b>When the Chips are Down!</b> <b>7/18.</b></p> -->
+      <!-- <p class="compact"><b>May 13th:</b> Rendered <b>Gone, I'm Gone!</b> <b>8/18.</b></p> -->
       <p class="compact"><b>May 14th:</b> Read <b>Lips Sealed</b>, Arc <b>3/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 14th:</b> Went bouldering for the <b>third</b> time this month<b>!</b></p>
       <p class="compact"><b>May 16th:</b> Read <b>Stitch in Time</b>, Arc <b>4/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 23rd:</b> Went bouldering for the <b>fourth</b> time this month<b>!</b></p>
-      <p class="compact"><b>May 24th:</b> Rendered <b>Wait for Me!</b> <b>9/18.</b></p>
+      <!-- <p class="compact"><b>May 24th:</b> Rendered <b>Wait for Me!</b> <b>9/18.</b></p> -->
       <p class="compact"><b>May 25th:</b> Logged my <b>third</b> hour of driving<b>!</b></p>
       <p class="compact"><b>May 25th:</b> Went bouldering for the <b>fifth</b> time this month<b>!</b></p>
       <p class="compact"><b>May 27th:</b> Went bouldering for the <b>sixth</b> time this month<b>!</b></p>
@@ -174,6 +174,8 @@
 
       <h3>August</h3>
       <p class="compact"><b>Aug 1st:</b> Read <b>Cut to the Quick</b>, Arc <b>11/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Aug 19th:</b> Read <b>Dyed in the Wool</b>, Arc <b>12/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>Aug 25th:</b> Printed out sheet music for <b>I Don't Care Much!</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
@@ -187,9 +189,11 @@
       <h3>C1: CG Art Piece</h3>
       <p class="compact">Haven't done art in a while<b>!</b> This goal is to help me get back into it. Of note, I want to do something I'm actually proud of, to tick this goal off. (This is true of most of my softer/non-numerical goals.)</p>
 
-      <p>The project I'm currently pursuing for this is my <b>Hadestown Immersive Karaoke</b> project. I think it would be fun to gather some friends for karaoke night, but then just do Hadestown, the whole thing, each assigned a character. Thanks to scope creep, the CG part of this project is making backing videos for the karaoke, replicating 2 hours worth of lighting cues, which is, a trek<b>!</b></p>
+      <!-- <p>The project I'm currently pursuing for this is my <b>Hadestown Immersive Karaoke</b> project. I think it would be fun to gather some friends for karaoke night, but then just do Hadestown, the whole thing, each assigned a character. Thanks to scope creep, the CG part of this project is making backing videos for the karaoke, replicating 2 hours worth of lighting cues, which is, a trek<b>!</b></p> -->
 
-      <p>Once I'm further along in this project, I'll likely make a webpage for it, talking about some of the decisions I made along the way.</p>
+      <!-- <p>Once I'm further along in this project, I'll likely make a webpage for it, talking about some of the decisions I made along the way.</p>-->
+
+      <p>Recently I've been investigating creating custom lenticular postcards.</p>
 
       <h3>D1: Tech Project</h3>
       <p class="compact">A technical project is like an art project, but more employable<b>!</b> Can't be for work or uni, has to be a personal project.</p>
@@ -198,9 +202,11 @@
       <p class="compact">I'm bad at having the motivation to apply for jobs, so by having this on my bingo board, when I look at the board to see how to spend my time, I'll get a little reminder to apply.</p>
 
       <h3>A2: Try Bookbinding</h3>
-      <p class="compact">Specifically, like, handbinding a book. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures, I think it would be fun<b>!</b></p>
+      <p class="compact">Specifically, like, handbinding a book. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures and gorgeous endpages, I think it would be fun<b>!</b></p>
 
-      <p>My current plan is to bind <a href="https://jan-lawa-lili.gitlab.io/">jan lawa lili</a>, the <a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> translation of <a href="https://en.wikipedia.org/wiki/The_Little_Prince">The Little Prince</a>, in the <b>sitelen pona</b> script. I find both the book and the language to be very beautiful and special to me, and, like, this is an obscure enough project that nobody will have done it before.</p>
+      <!-- <p>My current plan is to bind <a href="https://jan-lawa-lili.gitlab.io/">jan lawa lili</a>, the <a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> translation of <a href="https://en.wikipedia.org/wiki/The_Little_Prince">The Little Prince</a>, in the <b>sitelen pona</b> script. I find both the book and the language to be very beautiful and special to me, and, like, this is an obscure enough project that nobody will have done it before.</p> -->
+
+      <p>Currently planning to typeset and bind <b>Carmilla</b>, the 1872 vampire novella.</p>
 
       <p>I think there's something special about holding in your hands an object that nobody else has seen before.</p>
 
@@ -216,6 +222,8 @@
       <p class="compact">Every time I sit down at an instrument, I play, like, the one song I already know, because I find it frustrating to learn new songs. For this goal I have to actually push through and fully learn a whole new song in its entirety.</p>
 
       <p>It's so fun to sing and play an instrument at once, and I love singing, so it would be good to work that into this. I might pick someting from <b>Ghost Quartet</b>, or <b>Hadestown</b>, or perhaps even <b>Carabet!</b></p>
+
+      <p>Update: I'm currently working on <b>I Don't Know</b>, from <b>Cabaret!</b> Originally I was looking at songs from Hadestown and Ghost Quartet, but since they're lead sheet based I've been chickening out<b>!</b> This song is more prescriptive, every note notated, and it's a bit above my level, so I'm struggling through it, but really enjoying the sensation of getting better, of things coming more easily to me the more I play them.</p>
 
       <h3>E2: Do 3 Pinks [✓]</h3>
       <p class="compact"><b>Pink</b> is a difficulty in my bouldering gym, around V3. Usually I find I can flash most <b>teals</b> (V2ish), but have no idea how to start pinks - this goal is designed to help me persevere and overcome the difficulty spike between teal and pink.</p>
@@ -256,7 +264,9 @@
       <h3>B4: Practice Voice</h3>
       <p class="compact">Bit of a broad goal, I just want to do something that involves recording my voice, listening to the recording, and then trying to improve. This could range from voice training to singing<b>!</b></p>
 
-      <p>Right now, I'm working on a cover of <b>I Don't Know,</b> from <b>Ghost Quartet!</b> It has lots of really cool and interesting harmonies and variety throughout. I'll probably do a couple incremental passes, each time identifying what I want to improve in my voice, to satisfy this goal<b>!</b></p>
+      <!-- <p>Right now, I'm working on a cover of <b>I Don't Know,</b> from <b>Ghost Quartet!</b> It has lots of really cool and interesting harmonies and variety throughout. I'll probably do a couple incremental passes, each time identifying what I want to improve in my voice, to satisfy this goal<b>!</b></p> -->
+
+      <p>I've been experimenting with recording my voice in the form of covers of some songs I like - it's been very interesting to explore and play around with harmonies.</p>
 
       <p>Exposing myself to my voice like this has been helping me feel more at ease with it, which is cool.</p>
 
