update tv tracker

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
       <ul>
         <li><a href="/bingo2025">My 2025 Bingo Board</a></li>
         <li><a href="/clock">An Astronomical Clock</a></li>
-        <li><a href="/comp1521">My COMP1521 Course Resources</a> <b>[Very WIP]</b></li>
+        <!-- <li><a href="/comp1521">My COMP1521 Course Resources</a> <b>[Very WIP]</b></li> -->
         <li><a href="/blackhole">A Black Hole Shader</a></li>
-        <li><a href="/notes">Assorted Notes</a></li>
+        <li><a href="/notes/tv">My TV Tracker</a></li>
+        <!-- <li><a href="/notes">Assorted Notes</a></li> -->
       </ul>
 
       <p>Thanks for stopping by<b>!</b></p>
